details semantic changes

--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -142,28 +142,30 @@
               located in the middle of Kathmandu city. It is center of faith of
               both Buddhist and Hindus.
             </p>
-            <legend>
-              <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
-              <span>Duration:</span>
-              <span>3 - 4 hours</span>
-            </legend>
-            <legend>
-              <i class="fa-solid fa-location-dot fa-2xl"></i>
-              <span>Location:</span>
-              <span>Swoyambhu, Kathmandu, Nepal</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
-              <span>Entrance Fee:</span>
-              <span>NPR 200</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-clock fa-2xl"></i>
-              <span>Opening Hours:</span>
-              <span>24 hours</span>
-            </legend>
-            <button>Book a Tour</button>
-          </aside>
+            <dl>
+              <dt>
+                <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
+                <span>Duration:</span>
+              </dt>
+              <dd>3 - 4 hours</dd>
+              <dt>
+                <i class="fa-solid fa-location-dot fa-2xl"></i>
+                <span>Location:</span>
+              </dt>
+              <dd>Swoyambhu, Kathmandu, Nepal</dd>
+              <dt>
+                <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
+                <span>Entrance Fee:</span>
+              </dt>
+              <dd>NPR 200</dd>
+              <dt>
+                <i class="fa-regular fa-clock fa-2xl"></i>
+                <span>Opening Hours:</span>
+              </dt>
+              <dd>24 hours</dd>
+            </dl>
+              <button>Book a Tour</button>
+            </aside>
         </div>
       </section>
       <section class="details-section section" id="bhaktapur-durbar-square">
@@ -179,26 +181,28 @@
               culture,tradition,religion from right way.we are here to support
               you for your tours.
             </p>
-            <legend>
-              <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
-              <span>Duration:</span>
-              <span>5 - 6 hours</span>
-            </legend>
-            <legend>
-              <i class="fa-solid fa-location-dot fa-2xl"></i>
-              <span>Location:</span>
-              <span>Durbar Square, Bhaktapur, Nepal</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
-              <span>Entrance Fee:</span>
-              <span>NPR 1000</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-clock fa-2xl"></i>
-              <span>Opening Hours:</span>
-              <span>9 am - 6 pm</span>
-            </legend>
+            <dl>
+              <dt>
+                <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
+                <span>Duration:</span>
+              </dt>
+                <dd>5 - 6 hours</span>
+              <dt>
+                <i class="fa-solid fa-location-dot fa-2xl"></i>
+                <span>Location:</span>
+              </dt>
+                <dd>Durbar Square, Bhaktapur, Nepal</dd>
+              <dt>
+                <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
+                <span>Entrance Fee:</span>
+              </dt>
+              <dd>NPR 1000</dd>
+              <dt>
+                <i class="fa-regular fa-clock fa-2xl"></i>
+                <span>Opening Hours:</span>
+              </dt>
+              <dd>9 am - 6 pm</dd>
+            </dl>
             <button>Book a Tour</button>
           </aside>
           <picture>
@@ -227,26 +231,28 @@
               artifacts. Explore opulent living quarters, ceremonial spaces, and
               a collection of historical treasures, offering a glimpse into the country's royal heritage.
             </p>
-            <legend>
-              <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
-              <span>Duration:</span>
-              <span>3 hours</span>
-            </legend>
-            <legend>
-              <i class="fa-solid fa-location-dot fa-2xl"></i>
-              <span>Location:</span>
-              <span>Narayanhiti Path, Kathmandu, Nepal</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
-              <span>Entrance Fee:</span>
-              <span>NPR 1000</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-clock fa-2xl"></i>
-              <span>Opening Hours:</span>
-              <span>10:30 am - 3:30 pm</span>
-            </legend>
+            <dl>
+              <dt>
+                <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
+                <span>Duration:</span>
+              </dt>
+              <dd>3 hours</dd>
+              <dt>
+                <i class="fa-solid fa-location-dot fa-2xl"></i>
+                <span>Location:</span>
+              </dt>
+              <dd>Narayanhiti Path, Kathmandu, Nepal</dd>
+              <dt>
+                <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
+                <span>Entrance Fee:</span>
+              </dt>
+              <dd>NPR 1000</dd>
+              <dt>
+                <i class="fa-regular fa-clock fa-2xl"></i>
+                <span>Opening Hours:</span>
+              </dt>
+              <dd>10:30 am - 3:30 pm</dd>
+            </dl>
             <button>Book a Tour</button>
           </aside>
         </div>
@@ -261,28 +267,30 @@
               spirituality and ancient rituals, offering a serene space for
               reflection amidst the cultural richness of Nepal.
             </p>
-            <legend>
-              <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
-              <span>Duration:</span>
-              <span>2 hours</span>
-            </legend>
-            <legend>
-              <i class="fa-solid fa-location-dot fa-2xl"></i>
-              <span>Location:</span>
-              <span>Pashupatinath, Kathmandu, Nepal</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
-              <span>Entrance Fee:</span>
-              <span>NPR 1000</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-clock fa-2xl"></i>
-              <span>Opening Hours:</span>
-              <span>4 am - 9 pm</span>
-            </legend>
-            <button>Book a Tour</button>
-          </aside>
+            <dl>
+              <dt>
+                <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
+                <span>Duration:</span>
+              </dt>
+              <dd>2 hours</dd>
+              <dt>
+                <i class="fa-solid fa-location-dot fa-2xl"></i>
+                <span>Location:</span>
+              </dt>
+              <dd>Pashupatinath, Kathmandu, Nepal</dd>
+              <dt>
+                <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
+                <span>Entrance Fee:</span>
+              </dt>
+              <dd>NPR 1000</dd>
+              <dt>
+                <i class="fa-regular fa-clock fa-2xl"></i>
+                <span>Opening Hours:</span>
+              </dt>
+              <dd>4 am - 9 pm</dd>
+              </dl>
+              <button>Book a Tour</button>
+            </aside>
           <picture>
             <img
             src="../images/kathmandu/kathmandu_pashupatinath_temple-details.jpg"
@@ -309,26 +317,28 @@
               engage in meditation, and immerse yourself in Tibetan Buddhist
               wisdom at this spiritual haven.
             </p>
-            <legend>
-              <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
-              <span>Duration:</span>
-              <span>2 - 3 hours</span>
-            </legend>
-            <legend>
-              <i class="fa-solid fa-location-dot fa-2xl"></i>
-              <span>Location:</span>
-              <span>Budhanilkantha, Kathmandu, Nepal</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
-              <span>Entrance Fee:</span>
-              <span>Free</span>
-            </legend>
-            <legend>
-              <i class="fa-regular fa-clock fa-2xl"></i>
-              <span>Opening Hours:</span>
-              <span>10 am - 4 pm</span>
-            </legend>
+            <dl>
+              <dt>
+                <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
+                <span>Duration:</span>
+              </dt>
+              <dd>2 - 3 hours</dd>
+              <dt>
+                <i class="fa-solid fa-location-dot fa-2xl"></i>
+                <span>Location:</span>
+              </dt>
+              <dd>Budhanilkantha, Kathmandu, Nepal</span>
+              <dt>
+                <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
+                <span>Entrance Fee:</span>
+              </dt>
+              <dd>Free</dd>
+              <dt>
+                <i class="fa-regular fa-clock fa-2xl"></i>
+                <span>Opening Hours:</span>
+              </dt>
+              <dd>10 am - 4 pm</dd>
+            </dl>
             <button>Book a Tour</button>
           </aside>
         </div>
