--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -10,92 +10,110 @@
       rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="../styles/newcastle.css" />
     <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./images/favicon_io/favicon-16x16.png"/>
+      rel="icon" type="image/png" sizes="16x16" href="../images/favicon_io/favicon-16x16.png"/>
     <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
     <title>Newcastle</title>
   </head>
   <body>
     <header>
-      <nav>
-        <div class="logo-container">
-          <a class="logo-anchor" href="../index.html"><p>TravelStorm</p></a>
-        </div>
-        <div class="anchor-container flex-center">
+      <section class="navigation">
+        <picture class="logo-container">
+          <a class="logo-anchor" href="/index.html"><p>TravelStorm</p></a>
+        </picture>
+        <nav class="anchor-container flex-center">
           <a href="../index.html" class="hover">Home</a>
           <a href="../pages/brussels.html" class="hover">Brussels</a>
           <a href="../pages/kathmandu.html" class="hover">Kathmandu</a>
-          <a href="../pages/newcastle.html" class="hover">Newcastle</a>
+          <a href="../pages/newcastle.html" class="hover current-page">Newcastle</a>
           <a href="../pages/telaviv.html" class="hover">Tel-Aviv</a>
-        </div>
-      </nav>
+        </nav>
+      </section>
     </header>
     <main>
-      <img src="../images/Newcastle Images/newcastle_city_centre_featured_image.jpg" alt="Sage" class="main-image">
-      <h1>The city of Newcastle is one of the big cities, situated in the North East of England</h1>
-      <h3>Our Newcastle is a great city, one that never stands still. A city that makes history and shapes the future.</h3>
+      <section>
+        <picture>
+          <img src="../images/Newcastle Images/newcastle_city_centre_featured_image.jpg" alt="Sage" class="main-image">
+        </picture>
+          <h1>The city of Newcastle is one of the big cities, situated in the North East of England</h1>
+          <h3>Our Newcastle is a great city, one that never stands still. A city that makes history and shapes the future.</h3>
+      </section>
       <section class="places">
-        <div>
+        <figure>
           <a href="https://www.newcastle.gov.uk/" target="_blank">
             <h5 class="words">The City of Newcastle</h5>
-            <img src="../images/Newcastle Images/newcastle_city_centre_featured_image.jpg" alt="City of Newcastle">
-          </a>
-        </div>
-        <div>
+              <picture>
+                <img src="../images/Newcastle Images/newcastle_city_centre_featured_image.jpg" 
+                alt="City of Newcastle">
+              </picture>
+            </a>
+        </figure>
+        <figure>
           <a href="https://newcastlecathedral.org.uk/" target="_blank">
             <h5 class="words">Newcastle Cathedral</h5>
-            <img src="../images/Newcastle Images/newcastle-cathedral.jpg" alt="Newcastle Cathedral">
+            <picture>
+              <img src="../images/Newcastle Images/newcastle-cathedral.jpg" alt="Newcastle Cathedral">
+            </picture>
           </a>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <a href="https://www.gateshead.gov.uk/article/3957/Angel-of-the-North" target="_blank">
             <h5 class="words">The Angel of the North</h5>
-            <img src="../images/Newcastle Images/Angel-square.jpg" alt="Angel of the North">
+              <picture>
+                <img src="../images/Newcastle Images/Angel-square.jpg" alt="Angel of the North">
+              </picture>
           </a>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <a href="https://www.nufc.co.uk/stadium/" target="_blank">
             <h5 class="words">St James Park</h5>
-            <img src="../images/Newcastle Images/St James park.jpg" alt="St James Park">
+              <picture>
+                <img src="../images/Newcastle Images/St James park.jpg" alt="St James Park">
+              </picture>
           </a>
-        </div>
+        </figure>
       </section>
       <section>
         <h1>The City of Newcastle</h1>
         <h3>Newcastle upon Tyne – or simply ‘Newcastle’ as it is most commonly referred to – is one of the most iconic cities in Britain, famous for its industrial heritage, eponymous brown ale, popular nightlife and distinct regional ‘Geordie’ dialect.
           Located in the North East of England on the banks of the River Tyne, the city has undergone several transformations since it began life as a Roman fort on Hadrian’s Wall in 122AD. The settlement was known as Pons Aelius, or Aelian Bridge in Latin, ‘Aelian’ being the family name of Emperor Hadrian. In the wake of the Roman’s departure from Britain in 410AD, Pons Aelius was renamed Monkchester and subsumed into the influential Anglo-Saxon Kingdom of Northumbria.</h3>
-        <img src="../images/Newcastle Images/newcastle_city_centre_featured_image.jpg" class="main-image">
+        <picture>
+          <img src="../images/Newcastle Images/newcastle_city_centre_featured_image.jpg" class="main-image">
+        </picture>
       </section>
       <section>
         <h1>Newcastle Cathedral</h1>
         <h3>All are warmly welcome to visit Newcastle Cathedral – whether you wish to join us for worship, seeking some space for peace and reflection; exploring the Cathedral’s treasures or visiting Café 16.
           The Cathedral offers a wealth of events and activities throughout the year which you can view on our ‘Whats On’ page. Our monuments, stained-glass windows and ledger stones tell vivid stories of Newcastle’s heritage and the Cathedral’s deep history which you can read about through the interpretation around the Cathedral.</h3>
-        <img src="../images/Newcastle Images/newcastle-cathedral.jpg" class="main-image">
-      </section>
+        <picture>
+          <img src="../images/Newcastle Images/newcastle-cathedral.jpg" class="main-image">
+        </picture>
+        </section>
       <section>
         <h1>The Angel of the North</h1>
         <h3>Gateshead Council's brief was simple; to create an ambitious artwork that would become a landmark of the region's character. Antony Gormley's winning design is now one of the most viewed pieces of art in the world. It is seen by more than one person every second. That's 90,000 every day or 33 million every year. 
           With its prime location, on a panoramic hilltop by the A1, the Angel of the North has become one of the most famous artworks in the region.  The sculpture was installed in February 1998 and over the last twenty years has become one of the most recognisable pieces of public art ever produced, winning many accolades and awards.
           The Angel of the North is located close to A1 and is easy to reach by both public transport and car.</h3>
-        <img src="../images/Newcastle Images/Angel-square.jpg" class="main-image">
+        <picture>
+          <img src="../images/Newcastle Images/Angel-square.jpg" class="main-image">
+        </picture>
       </section>
       <section>
         <h1>St James Park</h1>
         <h3>Delve into Newcastle United's history all the way back to the late 1800s by joining us on a tour of the iconic St James' Park. Accompanied by a tour guide you will visit areas of the ground reserved for players and officials only, including the Home Dressing Room, Media Suite, Director's Box, and more. Tours last approximately 90 minutes, and run daily at 11.30, 12.30, And 14.30, At a cost of £15 an adult, £12 a concession, and £8 a junior.</h3>
-        <img src="../images/Newcastle Images/St James park.jpg" class="main-image">
+        <picture>
+          <img src="../images/Newcastle Images/St James park.jpg" class="main-image">
+        </picture>
       </section>
     </main>
     <footer class="flex-center flex-column">
       <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
-      <div class="flex-center">
+      <nav class="flex-center">
         <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
-      </div>
+      </nav>
     </footer>
   </body>
 </html>
