title changes for all site

--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -19,7 +19,7 @@ awesome/6.2.0/css/all.min.css"
       href="../images/favicon_io/favicon-16x16.png"
     />
     <!-- end -->
-    <title>Brussels</title>
+    <title>TravelStorm:Brussels</title>
   </head>
   <body>
     <header>
