--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -27,7 +27,7 @@
       sizes="16x16"
       href="../images/favicon_io/favicon-16x16.png"
     />
-    <title>Travel-Storm:Kathmandu</title>
+    <title>TravelStorm:Kathmandu</title>
   </head>
   <body>
     <header>
@@ -58,7 +58,7 @@
               <img
                 src="../images/kathmandu/kathmandu_swayambhunath_temple.jpg"
                 alt="Swayambhunath Temple: Majestic stupa surrounded by prayer flags, an iconic symbol of spiritual serenity in Kathmandu."
-              />
+              >
               <h3>Swayambhunath: The Enchanting Stupa of Kathmandu</h3>
               <p>
                 Ascend to serenity at Swayambhunath, the iconic Monkey Temple.
@@ -73,7 +73,7 @@
               <img
                 src="../images/kathmandu/kathmandu_bhaktapur_durbar_square.jpg"
                 alt="Bhaktapur Durbar Square: Timeless architecture and vibrant heritage captured in the heart of Bhaktapur, Nepal."
-              />
+              >
               <h3>Bhaktapur Durbar Square: Timeless Elegance in Nepal</h3>
               <p>
                 Explore the heart of Bhaktapur's history at Durbar Square.
@@ -86,7 +86,7 @@
               <img
                 src="../images/kathmandu/kathmandu_narayanhiti_palace_museum.jpg"
                 alt="Narayanhiti Palace Museum: Regal elegance preserved, offering a glimpse into Nepal's royal history and opulent past."
-              />
+              >
               <h3>Narayanhiti Palace Museum: Royal Splendor Preserved</h3>
               <p>
                 Discover the opulence and intrigue of Nepal's royal history at
@@ -100,7 +100,7 @@
               <img
                 src="../images/kathmandu/kathmandu_pashupatinath_temple.jpg"
                 alt="Pashupatinath Temple: Sacred beauty along the Bagmati River, an iconic UNESCO site blending spirituality and ancient rituals."
-              />
+              >
               <h3>Pashupatinath Temple: The Holy Temple</h3>
               <p>
                 Immerse in divine tranquility at Pashupatinath Temple, where
@@ -114,7 +114,7 @@
               <img
                 src="../images/kathmandu/kathmandu_kopan_monastery.jpg"
                 alt="Kopan Monastery nestled in the hills, a tranquil retreat for spiritual seekers and meditation enthusiasts"
-              />
+              >
               <h3>Kopan Monastery: Retreat into Spiritual Bliss</h3>
               <p>
                 Nestled in the hills, Kopan Monastery beckons with its peaceful
@@ -134,7 +134,7 @@
             src="../images/kathmandu/kathmandu_swayambunath_temple_details.jpg"
             alt="swayambunath temple the majestic stupa"
             loading="lazy"
-            />
+            >
           </picture>
           <aside class="details-text-container">
             <p>
@@ -222,7 +222,7 @@
             src="../images/kathmandu/kathmandu_narayanhiti_palace_museum-details.jpg"
             alt="narayanhiti royal palace museum the royal history of nepal"
             loading="lazy"
-            />
+            >
           </picture>
           <aside class="details-text-container">
             <p>
@@ -296,7 +296,7 @@
             src="../images/kathmandu/kathmandu_pashupatinath_temple-details.jpg"
             alt="the holy temple of pashupatinath"
             loading="lazy"
-            />
+            >
           </picture>
         </div>
       </section>
@@ -308,7 +308,7 @@
             src="../images/kathmandu/kathmandu_kopan_monastery_details.jpg"
             alt="Kopan Monastery: Tranquil Tibetan retreat"
             loading="lazy"
-            />
+            >
           </picture>
           <aside class="details-text-container">
             <p>
