--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -10,9 +10,9 @@
       rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="../styles/newcastle.css" />
     <link rel="icon" type="image/png" sizes="16x16"
-      href="./images/favicon_io/favicon-16x16.png"/>
+      href="../images/favicon_io/favicon-16x16.png"/>
     <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
-    <title>Newcastle</title>
+    <title>TravelStorm:Newcastle</title>
   </head>
   <body>
     <header>
