--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -11,7 +11,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../styles/telaviv.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_io/favicon-16x16.png" />
-    <title>Travel-Storm</title>
+    <title>TravelStorm:Tel-Aviv</title>
 </head>
 <body>
     <header>
