--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -10,10 +10,9 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../styles/telaviv.css" />
-    <!-- favicon section -->
     <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_io/favicon-16x16.png" />
-    <!-- end -->
-    <title>Travel-Storm</title>
+    <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
+    <title>TravelStorm</title>
 </head>
 
 <body>
@@ -46,7 +45,7 @@
 
         <section class="cards">
             <h2 class="title">What to do in Tel-Aviv</h2>
-            <div class="holder">
+            <legend class="holder">
                 <div class="card">
                     <img class="card-header" src="../images/tel-aviv/Tel-Aviv-Experiences-Nightlife.jpg"
                         alt="Tel Aviv Nightlife">
@@ -72,7 +71,7 @@
                         Explore the old city of jaffa and dine in delicious restaurant
                     </p>
                 </div>
-            </div>
+            </legend>
         </section>
 
         <section class="review">
@@ -83,19 +82,26 @@
             <span class="author">-Bob</span>
         </section>
         <section class="call-action">
-            <div>
+            <legend>
                 <p>
                     Book a tour now!<br>
                     <span>Book a tour with our expert local guides now!</span>
                 </p>
-                <button >
+                <button>
                     Book Now!
                 </button>
-            </div>
+            </legend>
         </section>
     </main>
-    <footer class="flex-center">
+    <footer class="flex-center flex-column">
         <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
+        <div class="flex-center">
+            <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
+            <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
+        </div>
     </footer>
 </body>
 
