Updated Header and Footer

--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -16,18 +16,17 @@
 </head>
 
 <body>
+
     <header>
-        <nav>
-            <a class="logo-container" href="../index.html">
-                TravelStorm
-            </a>
-            <div class="anchor-container flex-center">
-                <a href="../index.html">Home</a>
-                <a href="../pages/brussels.html">Brussles</a>
-                <a href="../pages/kathmandu.html">Kathmandu</a>
-                <a href="../pages/newcastle.html">Newcastle</a>
-                <a href="../pages/telaviv.html" class="current-page">Tel-Aviv</a>
-            </div>
+        <picture class="logo-container">
+            <a class="logo-anchor" href="index.html">TravelStorm</p></a>
+        </picture>
+        <nav class="anchor-container flex-center">
+            <a href="index.html" class="current-page">Home</a>
+            <a href="../pages/brussels.html" class="hover">Brussels</a>
+            <a href="../pages/kathmandu.html" class="hover">Kathmandu</a>
+            <a href="../pages/newcastle.html" class="hover">Newcastle</a>
+            <a href="../pages/telaviv.html" class="hover">Tel-Aviv</a>
         </nav>
     </header>
     <main>
@@ -95,13 +94,13 @@
     </main>
     <footer class="flex-center flex-column">
         <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
-        <div class="flex-center">
+        <nav class="flex-center">
             <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
             <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
             <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
             <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
             <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
-        </div>
+        </nav>
     </footer>
 </body>
 
