fixed button on small screen

--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -11,20 +11,18 @@
 awesome/6.2.0/css/all.min.css"
     />
     <link rel="stylesheet" href="../styles/brussels.css" />
-    <!-- favicon section -->
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="../images/favicon_io/favicon-16x16.png"
     />
-    <!-- end -->
     <title>TravelStorm:Brussels</title>
   </head>
   <body>
     <header>
       <picture class="logo-container">
-        <a  href="../index.html">TravelStorm</a>
+        <a href="../index.html">TravelStorm</a>
       </picture>
       <nav class="anchor-container flex-center">
         <a href="../index.html">Home</a>
@@ -163,13 +161,13 @@ awesome/6.2.0/css/all.min.css"
     </section>
     <footer class="flex-center flex-column">
       <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
-      <div class="flex-center">
+      <nav class="flex-center">
         <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
         <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
-      </div>
+      </nav>
     </footer>
   </body>
 </html>
