small type in kathmandu page

--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -332,7 +332,7 @@
 								<i class="fa-solid fa-location-dot fa-2xl"></i>
 								<span>Location:</span>
 							</dt>
-							<span>Budhanilkantha, Kathmandu, Nepal</span>
+							<dd>Budhanilkantha, Kathmandu, Nepal</dd>
 							<dt>
 								<i class="fa-regular fa-money-bill-1 fa-2xl"></i>
 								<span>Entrance Fee:</span>
