padding on image

--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -30,7 +30,7 @@
     <main>
       <section>
         <picture>
-          <img src="../images/Newcastle Images/newcastle_city_centre_featured_image.jpg" alt="Sage" class="main-image">
+          <img src="../images/Newcastle Images/newcastle_city_centre_featured_image.jpg" alt="Sage" class="main-image-top">
         </picture>
           <h1>The city of Newcastle is one of the big cities, situated in the North East of England</h1>
           <h3>Our Newcastle is a great city, one that never stands still. A city that makes history and shapes the future.</h3>
