--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -83,7 +83,7 @@
         <h3>All are warmly welcome to visit Newcastle Cathedral – whether you wish to join us for worship, seeking some space for peace and reflection; exploring the Cathedral’s treasures or visiting Café 16.
           The Cathedral offers a wealth of events and activities throughout the year which you can view on our ‘Whats On’ page. Our monuments, stained-glass windows and ledger stones tell vivid stories of Newcastle’s heritage and the Cathedral’s deep history which you can read about through the interpretation around the Cathedral.</h3>
         <picture>
-          <img src="../images/Newcastle Images/newcastle-cathedral.jpg" class="main-image">
+          <img src="../images/Newcastle Images/newcastle-cathedral.jpg" class="main-image-cath">
         </picture>
         </section>
       <section>
@@ -99,7 +99,7 @@
         <h1>St James Park</h1>
         <h3>Delve into Newcastle United's history all the way back to the late 1800s by joining us on a tour of the iconic St James' Park. Accompanied by a tour guide you will visit areas of the ground reserved for players and officials only, including the Home Dressing Room, Media Suite, Director's Box, and more. Tours last approximately 90 minutes, and run daily at 11.30, 12.30, And 14.30, At a cost of £15 an adult, £12 a concession, and £8 a junior.</h3>
         <picture>
-          <img src="../images/Newcastle Images/St James park.jpg" class="main-image">
+          <img src="../images/Newcastle Images/St James park.jpg" class="main-image-james">
         </picture>
       </section>
     </main>
