Updated nav and footer in tel aviv page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
       <header>
           <picture class="logo-container">
-            <a class="logo-anchor" href="index.html">TravelStorm</p></a>
+            <a class="logo-anchor" href="index.html">TravelStorm</a>
           </picture>
           <nav class="anchor-container flex-center">
             <a href="index.html" class="current-page">Home</a>
