--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -12,21 +12,21 @@
     <link rel="stylesheet" type="text/css" href="../styles/telaviv.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_io/favicon-16x16.png" />
     <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
-    <title>TravelStorm</title>
+    <title>TravelStorm: Tel-Aviv</title>
 </head>
 
 <body>
 
     <header>
         <picture class="logo-container">
-            <a class="logo-anchor" href="index.html">TravelStorm</p></a>
+            <a class="logo-anchor" href="index.html">TravelStorm</a>
         </picture>
         <nav class="anchor-container flex-center">
-            <a href="index.html" class="current-page">Home</a>
+            <a href="index.html" class="hover">Home</a>
             <a href="../pages/brussels.html" class="hover">Brussels</a>
             <a href="../pages/kathmandu.html" class="hover">Kathmandu</a>
             <a href="../pages/newcastle.html" class="hover">Newcastle</a>
-            <a href="../pages/telaviv.html" class="hover">Tel-Aviv</a>
+            <a href="../pages/telaviv.html" class="current-page">Tel-Aviv</a>
         </nav>
     </header>
     <main>
@@ -75,8 +75,7 @@
 
         <section class="review">
             <p>
-                "Great City yo travel with friends! Highly recommended awesome nightlife and bars!"
-
+                "Great City to travel with friends! Highly recommended awesome nightlife and bars!"
             </p>
             <span class="author">-Bob</span>
         </section>
